--- a/lang/es.json
+++ b/lang/es.json
@@ -32,6 +32,7 @@
         "ChooseLanguage": "Elegir idioma",
         "ChoosePeriod": "Elegir periodo",
         "ChooseWebsite": "Elegir sitio web",
+        "Clear": "Quitar",
         "ClickHere": "Haga clic aquí para más información.",
         "ClickToChangePeriod": "Haz un click nuevamente para modificar el período.",
         "Close": "Cerrar",
@@ -167,6 +168,7 @@
         "ExceptionUnableToStartSession": "No se pudo iniciar sesión.",
         "ExceptionUndeletableFile": "No se puede borrar %s",
         "ExceptionUnreadableFileDisabledMethod": "El archivo de configuración {%s} no se pudo leer. Su host puede estar deshabilitado %s.",
+        "ExceptionWidgetNotFound": "El widget solicitado no existe.",
         "ExpandDataTableFooter": "Cambia la visualización o modifica el informe",
         "Export": "Exportar",
         "ExportAsImage": "Exportar como Imagen",
@@ -400,6 +402,7 @@
         "Unknown": "Desconocido",
         "Upload": "Subir",
         "UsePlusMinusIconsDocumentation": "Use los iconos de más y menos en la izquierda para navegar.",
+        "UserId": "ID Usuario",
         "Username": "Nombre de usuario",
         "UseSMTPServerForEmail": "Use el servidor SMTP para el correo",
         "Value": "Valor",
