--- a/lang/et.json
+++ b/lang/et.json
@@ -50,6 +50,7 @@
         "ColumnMaxActions": "Maksimaalne tegevuste arv ühe külastuse jooksul",
         "ColumnNbActions": "Tegevused",
         "ColumnNbUniqVisitors": "Unikaalsed külastajad",
+        "ColumnNbUsers": "Kasutajaid",
         "ColumnNbVisits": "Külastused",
         "ColumnPageviews": "Lehevaatamisi",
         "ColumnPercentageVisits": "% Külastustest",
@@ -207,6 +208,7 @@
         "NotValid": "%s ei ole kehtiv",
         "NSeconds": "%s sekundit",
         "NumberOfVisits": "Külastuste arv",
+        "NUsers": "%s kasutajaid",
         "NVisits": "%s külastust",
         "Ok": "Ok",
         "OneAction": "1 tegevus",
@@ -313,6 +315,7 @@
         "Table": "Tabel",
         "TagCloud": "Sildipilv",
         "Tax": "Maksud",
+        "TimeAgo": "%s tagasi",
         "TimeOnPage": "Aeg lehel",
         "Today": "Täna",
         "Total": "Kokku",
@@ -327,6 +330,7 @@
         "Unknown": "Tundmatu",
         "Upload": "Üleslaadimine",
         "UsePlusMinusIconsDocumentation": "Kasuta pluss ja miinus ikoone vasakul, et navigeerida",
+        "UserId": "Kasutaja ID",
         "Username": "Kasutajanimi",
         "UseSMTPServerForEmail": "Kasuta e-posti edastamiseks SMTP serverit",
         "Value": "Väärtus",
