--- a/lang/ja.json
+++ b/lang/ja.json
@@ -133,13 +133,18 @@
         "DownloadFail_FileExistsContinue": "%s のダウンロードを続行しようとしていますが、完全にダウンロードされたファイルがすでに存在しています!",
         "DownloadFail_HttpRequestFail": "ファイルをダウンロードできませんでした! ダウンロード元のウェブサイトに何らかの誤りがあるかもしれません。後でもう一度試すか、自分自身でファイルを取得してください。",
         "DownloadFullVersion": "フルバージョンを%1$sダウンロード%2$s！ %3$s を確認してください",
+        "DownloadPleaseRemoveExisting": "それを置き換える場合は、既存のファイルを削除してください。",
         "Downloads": "ダウンロード数",
         "EcommerceOrders": "eコマース受注",
+        "EcommerceVisitStatusDesc": "訪問の最後に、e コマースの状況をご確認ください。",
+        "EcommerceVisitStatusEg": "例えば、e コマースで注文を行った全ての訪問を選択するために、 API リクエストは %s を含んでいる可能性があります。",
         "Edit": "編集",
         "EncryptedSmtpTransport": "SMTP サーバーで必要となる、トランスポートレイヤーの暗号を入力します。",
         "EnglishLanguageName": "Japanese",
         "Error": "エラー",
+        "ErrorRequest": "おっと ! ...リクエスト中に問題がありました。おそらくサーバに一時的な問題が発生しているか、データ量が多過ぎるレポートをリクエストした可能性があります。もう一度お試しください。このエラーが繰り返し表示される場合は、%scontact your Piwik dministrator%s",
         "EvolutionOverPeriod": "一定期間の推移",
+        "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "ユーザーは、スーパーユーザーもしくはユーザー '%s' それ自身のいずれかである必要があります。",
         "ExceptionConfigurationFileNotFound": "設定ファイル {%s} が見つかりませんでした",
         "ExceptionDatabaseVersion": "%1$s のバージョンが %2$s ですが、Piwik には少なくとも %3$s が必要となります。",
         "ExceptionFileIntegrity": "整合性チェックの失敗： %s",
@@ -161,9 +166,12 @@
         "ExceptionPrivilege": "このリソースには %s アクセス権が必要なため、アクセスすることはできません。",
         "ExceptionPrivilegeAccessWebsite": "このリソースには website id = %d 用の %s アクセス権が必要なため、アクセスすることはできません。",
         "ExceptionPrivilegeAtLeastOneWebsite": "このリソースには少なくとも1つのウェブサイト用の %s アクセス権が必要なため、アクセスすることはできません。",
+        "ExceptionReportNotEnabled": "リクエストされたレポートは、利用できません。レポートの定義が無効になっているか、このレポートにアクセスする十分な権限を持っていない可能性があります。",
+        "ExceptionReportNotFound": "リクエストされたレポートは存在しません。",
         "ExceptionUnableToStartSession": "セッションを開始できません",
         "ExceptionUndeletableFile": "%s が削除できませんでした",
         "ExceptionUnreadableFileDisabledMethod": "設定ファイル {%s} を読み込むことができませんでした。 サーバーで %s が無効化されている可能性があります。",
+        "ExceptionWidgetNotFound": "リクエストされたウィジェットは存在しません。",
         "ExpandDataTableFooter": "ビジュアルの変更やレポートの設定",
         "Export": "エクスポート",
         "ExportAsImage": "画像としてエクスポートする",
@@ -184,6 +192,7 @@
         "GraphHelp": "Piwik でのグラフ表示の詳細です。",
         "HelloUser": "こんにちは、%s さん！",
         "Help": "ヘルプ",
+        "HelpTranslatePiwik": "%1$shelp us improve the Piwik translations%2$s ?",
         "Hide": "非表示にする",
         "HoursMinutes": "%1$s 時間 %2$s 分",
         "Id": "ID",
@@ -289,6 +298,7 @@
         "Others": "その他",
         "Outlink": "外部リンク",
         "Outlinks": "外部リンク数",
+        "OverlayRowActionTooltip": "ウェブサイトで新しいタブを開いて、直接分析データをご確認ください。",
         "OverlayRowActionTooltipTitle": "ページオーバーレイを開く",
         "Overview": "概観",
         "Pages": "ページ",
@@ -296,6 +306,8 @@
         "Password": "パスワード",
         "Period": "期間",
         "Piechart": "円グラフ",
+        "PiwikIsACollaborativeProjectYouCanContributeAndDonate": "%1$sPiwik%2$s は、%7$sPiwik team%8$s メンバーだけでなく世界中の他の多くの貢献者による共同プロジェクトです。もし Piwik のファンになって頂けたら、ぜひ貢献してください。: %3$sHow to participate in Piwik%4$s を読んで、Piwik 3.0 基金を助けるために %5$sdonate %6$s !",
+        "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s が利用可能です。ぜひ %2$sPiwik administrator%3$s に通知してください。",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s が利用可能です。 %2$s今すぐアップデートしてください！%3$s（%4$s変更点%5$sを参照）。",
         "PleaseSpecifyValue": "'%s' の値を指定してください。",
         "PleaseUpdatePiwik": "Piwik を更新してください",
@@ -311,6 +323,7 @@
         "PurchasedProducts": "購入された製品",
         "Quantity": "数量",
         "RangeReports": "カスタム期間",
+        "ReadThisToLearnMore": "%1$sRead this to learn more.%2$s",
         "Recommended": "（推奨）",
         "RecordsToPlot": "プロットするレコード",
         "Refresh": "リフレッシュ",
@@ -320,6 +333,7 @@
         "Remove": "削除",
         "Report": "リポート",
         "ReportGeneratedFrom": "このレポートは、%s のデータを使用して生成しました。",
+        "ReportRatioTooltip": "'%1$s' は %5$s で %3$s %4$s の %2$s を表しています。",
         "Reports": "リポート",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "今日のリポート（または今日を含む、他の日付範囲）が生成される間隔は",
         "ReportsWillBeProcessedAtMostEveryHour": "従って、リポートは1時間ごとに処理されます。",
@@ -370,6 +384,7 @@
         "SmtpServerAddress": "SMTP のサーバアドレス",
         "SmtpUsername": "SMTP のユーザー名",
         "Source": "ソース",
+        "StatisticsAreNotRecorded": "Piwik ビジタートラッキングは、現在利用できません! お使いの config\/config.ini.php ファイルで record_statistics = 1 を設定することで、再度ご利用頂けるようになります。",
         "Subtotal": "小計",
         "Summary": "サマリ",
         "Table": "テーブル",
@@ -379,7 +394,9 @@
         "TimeOnPage": "このページの滞在時間",
         "Today": "今日",
         "Total": "合計",
+        "TotalRatioTooltip": "これは、全ての %2$s %3$s の %1$sです。",
         "TotalRevenue": "総収益",
+        "TotalVisitsPageviewsRevenue": "( 合計 : 訪問数 %s 、ページビュー %s 、利益 %s )",
         "TransitionsRowActionTooltip": "訪問者が、このページの表示前後に何をしていたか見てください",
         "TransitionsRowActionTooltipTitle": "トランジションを開く",
         "TranslatorEmail": "hello@piwik.org",
@@ -408,6 +425,7 @@
         "VisitTypeExample": "例えば、前回のビジットで何かを購入した訪問者を含む、全てのリピーターを選択するためのAPIリクエストは %s を含むものとなります。",
         "Warning": "警告",
         "WarningFileIntegrityNoManifest": "manifest.inc.php が不足しているため、ファイルの整合性チェックを実行することができませんでした。",
+        "WarningFileIntegrityNoManifestDeployingFromGit": "Git から Piwik を開発している場合、このメッセージは正常です。",
         "WarningFileIntegrityNoMd5file": "md5_file() 関数が存在しないため、ファイルの整合性チェックを完了することができませんでした。",
         "WarningPasswordStored": "%s警告：%s このパスワードは設定ファイルに保存されます。 この設定ファイルにアクセス可能な人であれば、パスワードを見られる可能性があることに注意してください。",
         "Website": "ウェブサイト",
@@ -416,6 +434,8 @@
         "WeeklyReports": "週次リポート",
         "WellDone": "よくできました！",
         "Widgets": "ウィジェット",
+        "XComparedToY": "%2$s に比べ %1$s",
+        "XFromY": "%2$s からの %1$s",
         "YearlyReport": "毎年",
         "YearlyReports": "年次リポート",
         "YearsDays": "%1$s 年 %2$s 日",
