--- a/lang/pl.json
+++ b/lang/pl.json
@@ -410,6 +410,7 @@
         "YearlyReport": "rocznie",
         "YearlyReports": "Raporty roczne",
         "YearsDays": "%1$s lat %2$s dni",
+        "YearShort": "r",
         "Yes": "Tak",
         "Yesterday": "wczoraj",
         "YouAreCurrentlyUsing": "Aktualnie używasz Piwik %s.",
@@ -452,7 +453,9 @@
         "NoWebsitesShort": "Brak stron",
         "RatingDontRemindMe": "Nie przypominaj mi",
         "RatingNotNow": "Nie teraz",
+        "Reloading": "Przeładowanie...",
         "SaveSuccessError": "Prosimy sprawdzić ustawienia konfiguracyjne",
+        "SearchWebsite": "Przeszukuj witryny",
         "ShowAll": "Pokaż wszystko",
         "ShowLess": "Pokaż mniej",
         "TryIt": "Wypróbuj!",
