--- a/plugins/Actions/lang/pt.json
+++ b/plugins/Actions/lang/pt.json
@@ -9,12 +9,16 @@
         "ColumnEntryPageURL": "URL da Página de Entrada",
         "ColumnExitPageTitle": "Título da Página de Saída",
         "ColumnExitPageURL": "URL da Página de Saída",
-        "ColumnPageName": "Nome da Páginal",
+        "ColumnNoResultKeyword": "Palavra Chave sem Resultado de Pesquisa",
+        "ColumnPageName": "Nome da Página",
         "ColumnPagesPerSearch": "Páginas de resultados",
         "ColumnPageURL": "Endereço da Página",
         "ColumnSearchCategory": "Pesquisar Categoria",
+        "ColumnSearches": "Pesquisas",
         "ColumnSearchesDocumentation": "O número de visitas que procurou esta palavra-chave no motor de busca do seu site.",
+        "ColumnSearchExits": "% Saídas de Pesquisa",
         "ColumnSearchExitsDocumentation": "A percentagem de visitas que deixou o site após a pesquisa por esta palavra-chave no motor de busca do seu Site.",
+        "ColumnSearchResultsCount": "Contagem de Resultados de Pesquisa",
         "ColumnSiteSearchKeywords": "Palavra Chave Única",
         "ColumnUniqueClicks": "Cliques Únicos",
         "ColumnUniqueClicksDocumentation": "O número de visitas que envolveu um clique neste link. Se um link foi clicado várias vezes durante uma visita, só é contado uma vez.",
@@ -22,8 +26,10 @@
         "ColumnUniqueOutlinks": "Links de saída únicos",
         "DownloadsReportDocumentation": "Neste relatório, você pode ver quais os arquivos que os visitantes têm feito download.%s O que o Piwik entende como um download é clicar num link de download. Se o download foi concluído ou não, não é conhecido pelo Piwik.",
         "EntryPagesReportDocumentation": "Este relatório contém informações sobre as páginas de entrada que foram utilizadas durante o período especificado. Uma página de entrada é a primeira página que um utilizador visualiza durante a sua visita. %s As URLs de entrada são exibidas como uma estrutura de pastas.",
+        "EntryPageTitles": "Títulos das páginas de entrada",
         "EntryPageTitlesReportDocumentation": "Este relatório contém informações sobre os títulos das páginas de entrada que foram usados ​​durante o período especificado.",
         "ExitPagesReportDocumentation": "Este relatório contém informações sobre as páginas de saída que ocorreram durante o período especificado. Uma página de saída é a última página que um utilizador visualiza durante a sua visita. %s Os URLs de saída são exibidos como uma estrutura de pastas.",
+        "ExitPageTitles": "Títulos das páginas de saída",
         "ExitPageTitlesReportDocumentation": "Este relatório contém informações sobre os títulos de páginas de saída que ocorreram durante o período especificado.",
         "OneSearch": "1 Pesquisa",
         "OutlinkDocumentation": "Um outlink é um link que leva o visitante para fora do seu website (para outro domínio).",
@@ -31,12 +37,24 @@
         "PagesReportDocumentation": "Este relatório contém informações sobre URLs das páginas que foram visitadas. %s A tabela está organizada hierarquicamente, as URLs são exibidas como uma estrutura de pastas.",
         "PageUrls": "URLs de páginas",
         "PluginDescription": "Relatórios sobre páginas vistas, ligações de saída e downloads. O rastreio de ligações de saída e downloads é automático.",
+        "SiteSearchCategories1": "Este relatório lista as Categorias que os visitantes selecionaram quando realizaram uma Pesquisa na sua página.",
         "SiteSearchCategories2": "Por exemplo, os sites de comércio electrónico têm tipicamente uma \"Categoria\" seleccionada de modo que os visitantes podem restringir suas pesquisas a todos os produtos em uma categoria específica.",
         "SiteSearchIntro": "Rastrear pesquisas que os visitantes fazem em seu site é uma maneira muito eficaz de aprender mais sobre o que o seu público está procurando, ele pode ajudar a encontrar ideias para novos conteúdos, novos produtos de comércio electrónico que os potenciais clientes podem estar procurando, e em geral, melhorar os visitantes experiência em seu site.",
+        "SiteSearchKeyword": "Palavra Chave (Pesquisa)",
         "SiteSearchKeywordsDocumentation": "Este relatório lista as palavras-chave de pesquisa que os visitantes procuraram em sua busca interna do motor.",
+        "SiteSearchKeywordsNoResultDocumentation": "Este relatório lista as Pesquisas de Palavras Chave que não devolveram resultado de Pesquisa algum: talvez o algoritmo do motor de busca pode ser melhorado, ou talvez os seus visitantes encontram-se à procura de conteúdo que (ainda) não consta na sua página.",
         "SubmenuPagesEntry": "Páginas de entrada",
         "SubmenuPagesExit": "Páginas de saída",
         "SubmenuPageTitles": "Títulos das páginas",
-        "SubmenuSitesearch": "Pesquisar Site"
+        "SubmenuSitesearch": "Pesquisar Site",
+        "WidgetEntryPageTitles": "Títulos de Páginas de Entrada",
+        "WidgetExitPageTitles": "Títulos de Páginas de Saída",
+        "WidgetPagesEntry": "Páginas de Entrada",
+        "WidgetPagesExit": "Páginas de Saída",
+        "WidgetPageTitles": "Títulos de Página",
+        "WidgetPageTitlesFollowingSearch": "Títulos de Páginas Resultantes de uma Pesquisa de Página",
+        "WidgetPageUrlsFollowingSearch": "Páginas Resultantes de uma Pesquisa de Página",
+        "WidgetSearchCategories": "Categorias de Pesquisa",
+        "WidgetSearchNoResultKeywords": "Palavras Chaves de Pesquisa Sem Resultados"
     }
 }
