--- a/plugins/CoreHome/lang/cs.json
+++ b/plugins/CoreHome/lang/cs.json
@@ -39,6 +39,7 @@
         "PeriodWeeks": "týdnů",
         "PeriodYear": "Rok",
         "PeriodYears": "let",
+        "PivotBySubtable": "Toto hlášení není zaměřené %s Zaměřit na %s",
         "PluginDescription": "Struktura hlášení",
         "ReportGeneratedOn": "Hlášení vygenerované %s",
         "ReportGeneratedXAgo": "Hlášení vygenerováno před %s",
@@ -54,6 +55,7 @@
         "SupportPiwik": "Podpořte Piwik!",
         "TableNoData": "Žádná data",
         "ThereIsNoDataForThisReport": "Pro toto hlášení nejsou k dispozici žádná data",
+        "UndoPivotBySubtable": "Toto hlášení bylo zaměřeno %s Vrátit zpět",
         "UnFlattenDataTable": "Hlášení je ploché %s Vytvořit hierarchický",
         "ViewAllPiwikVideoTutorials": "Zobrazit všechny návody Piwik",
         "WebAnalyticsReports": "Hlášení",
