--- a/plugins/CoreHome/lang/da.json
+++ b/plugins/CoreHome/lang/da.json
@@ -41,6 +41,7 @@
         "PeriodWeeks": "uger",
         "PeriodYear": "År",
         "PeriodYears": "år",
+        "PivotBySubtable": "Rapporten er ikke pivoteret %s Pivoter med %s.",
         "PluginDescription": "Struktur for webanalyse-rapporter.",
         "ReportGeneratedOn": "Rapport genereret på %s",
         "ReportGeneratedXAgo": "Rapport genereret %s siden",
@@ -56,6 +57,7 @@
         "SupportPiwik": "Støt Piwik!",
         "TableNoData": "Ingen data til denne tabel.",
         "ThereIsNoDataForThisReport": "Der er ingen data for denne rapport.",
+        "UndoPivotBySubtable": "Rapporten er blevet pivoteret %s Fortryd pivot.",
         "UnFlattenDataTable": "Rapporten er ikke hierarkisk %s lav den hierakisk",
         "ViewAllPiwikVideoTutorials": "Vis alle Piwik videoselvstudier",
         "WebAnalyticsReports": "Webanalyse-rapporter",
