--- a/plugins/CoreHome/lang/de.json
+++ b/plugins/CoreHome/lang/de.json
@@ -41,6 +41,7 @@
         "PeriodWeeks": "Wochen",
         "PeriodYear": "Jahr",
         "PeriodYears": "Jahre",
+        "PivotBySubtable": "Kein Pivot erstellt für diesen Bericht %s Pivot erstellen mit %s",
         "PluginDescription": "Webanalytik Berichts-Struktur",
         "ReportGeneratedOn": "Bericht erzeugt am %s",
         "ReportGeneratedXAgo": "Bericht erzeugt vor %s",
@@ -56,6 +57,7 @@
         "SupportPiwik": "Unterstützen Sie Piwik!",
         "TableNoData": "Keine Daten für diese Tabelle.",
         "ThereIsNoDataForThisReport": "Es stehen keine Daten für diesen Bericht zur Verfügung.",
+        "UndoPivotBySubtable": "Pivot erstellt für diesen Bericht %s Pivot rückgängig machen",
         "UnFlattenDataTable": "Der Bericht ist flach %s Hierarchisch anzeigen",
         "ViewAllPiwikVideoTutorials": "Zeige alle Piwik Video Tutorials an",
         "WebAnalyticsReports": "Webanalytik Berichte",
