--- a/plugins/CoreHome/lang/el.json
+++ b/plugins/CoreHome/lang/el.json
@@ -41,6 +41,7 @@
         "PeriodWeeks": "εβδομάδων",
         "PeriodYear": "Έτος",
         "PeriodYears": "ετών",
+        "PivotBySubtable": "Η αναφορά αυτή δεν είναι θεμελιωμένη %s Να θεμελιωθεί από %s",
         "PluginDescription": "Δομή Αναφορών Ανάλυσης Ιστού.",
         "ReportGeneratedOn": "Η αναφορά δημιουργήθηκε στις %s",
         "ReportGeneratedXAgo": "Η αναφορά δημιουργήθηκε πριν από %s",
@@ -56,6 +57,7 @@
         "SupportPiwik": "Στηρίξτε το Piwik!",
         "TableNoData": "Δεν υπάρχουν δεδομένα για τον πίνακα.",
         "ThereIsNoDataForThisReport": "Δεν υπάρχουν δεδομένα για αυτή την αναφορά.",
+        "UndoPivotBySubtable": "Η αναφορά θεμελιώθηκε %s Αναίρεση της θεμελίωσης",
         "UnFlattenDataTable": "Η αναφορά είναι επίπεδη %s Κάντε την ιεραρχημένη",
         "ViewAllPiwikVideoTutorials": "Δείτε όλα τα βίντεο εκμάθησης του Piwik",
         "WebAnalyticsReports": "Αναφορές Στατιστικών Ιστού",
