--- a/plugins/CoreHome/lang/it.json
+++ b/plugins/CoreHome/lang/it.json
@@ -41,6 +41,7 @@
         "PeriodWeeks": "settimane",
         "PeriodYear": "Anno",
         "PeriodYears": "anni",
+        "PivotBySubtable": "Questo report non è imperniato al Pivot %s da %s",
         "PluginDescription": "Struttura di base per i report di Web Analytics.",
         "ReportGeneratedOn": "Report generato il %s",
         "ReportGeneratedXAgo": "Report generato %s fa",
@@ -56,6 +57,7 @@
         "SupportPiwik": "Sostieni Piwik!",
         "TableNoData": "nessun dato per questa tabella.",
         "ThereIsNoDataForThisReport": "Non c'è nessun dato in questo report.",
+        "UndoPivotBySubtable": "Questo report è stato imperniato al Pivot %s Undo",
         "UnFlattenDataTable": "Il report è piatto %s Rendilo gerarchico",
         "ViewAllPiwikVideoTutorials": "Vedi tutti i Video Tutorial di Piwik",
         "WebAnalyticsReports": "Report Web Analytics",
