--- a/plugins/Goals/lang/es.json
+++ b/plugins/Goals/lang/es.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Tus mejores palabras de búsqueda son:",
         "BestReferrers": "Tus mejores palabras de búsqueda son:",
         "CaseSensitive": "Coincidir mayúsculas y minúsculas",
+        "ChooseGoal": "Elegir Objetivo",
         "ClickOutlink": "Clic en un Enlace a un sitio web externo",
         "ColumnAverageOrderRevenueDocumentation": "Valor Medio del Pedido (VMP) es el valor obtenido dividiendo los ingresos totales de todos los pedidos entre el número de pedidos.",
         "ColumnAveragePriceDocumentation": "El promedio de ingresos para este %s.",
