--- a/plugins/UserCountryMap/lang/pl.json
+++ b/plugins/UserCountryMap/lang/pl.json
@@ -10,6 +10,7 @@
         "Minutes": "minut",
         "None": "Brak",
         "NoVisit": "Brak wizyt",
+        "RealTimeMap": "Mapa czasu rzeczywistego",
         "Regions": "Regiony",
         "Searches": "%s wyszukań",
         "Seconds": "sekund",
