--- a/plugins/API/lang/pt.json
+++ b/plugins/API/lang/pt.json
@@ -6,6 +6,7 @@
         "MoreInformation": "Para mais informação sobre os APIs de Piwik, por favor dê uma vista de olhos na %s Introdução ao API Piwik %s e a %s Referência do API Piwik %s.",
         "PluginDescription": "Todos os dados em Piwik estão disponíveis através de APIs simples. Este plugin é o ponto de entrada do serviço web, que pode chamar para receber os seus dados das Analíticas Web em xml, json, php, csv, etc.",
         "QuickDocumentationTitle": "Documentação rápida do API",
+        "TopLinkTooltip": "Aceda programaticamente à sua informação através de uma simples API em json, xml, etc.",
         "UserAuthentication": "Autenticação do utilizador",
         "UsingTokenAuth": "Se quer %s pedir dados através de um script, crontab, etc. %s tem que adicionar o parâmetro %s aos URLs das chamadas do API que necessitam de autenticação."
     }
