--- a/plugins/CoreAdminHome/lang/es.json
+++ b/plugins/CoreAdminHome/lang/es.json
@@ -10,6 +10,8 @@
         "CustomLogoHelpText": "Puede personalizar el logo de Piwik que será mostrado en la interfaz de usuario y los reportes por email.",
         "DevelopmentProcess": "Mientras que nuestro %sproceso de desarrollo%s incluye miles de pruebas automatizadas, Beta Testers juegan un papel clave en el logro de la \"política de no error\" en Piwik.",
         "EmailServerSettings": "Configuración del servidor de email",
+        "FaviconUpload": "Selecciona un Favicon para subir",
+        "FileUploadDisabled": "La subida de archivos no está habilitada en tu configuración de PHP. Para subir tu logo personalizado por favor pon %s en php.ini y reinicia tu servidor web.",
         "ForBetaTestersOnly": "Para betatesters sólo",
         "ImageTracking": "Seguimiento mediante Imagen",
         "ImageTrackingIntro1": "Cuando un visitante se ha inhabilitado JavaScript o JavaScript que no se puede utilizar, puede utilizar un vínculo de seguimiento en la imagen para rastrear a los visitantes.",
@@ -49,6 +51,7 @@
         "LogoNotWriteableInstruction": "Para utilizar tu logo personalizado en lugar del logo estándar de Piwik puedes conceder permisos de escritura a este directorio: %1$s Piwik necesita el permiso de escritura para sus logos salvados en los archivos %2$s.",
         "LogoUpload": "Seleccione un logo para subir",
         "LogoUploadHelp": "Sube un archivo en formato %s con un alto mínimo de %s píxeles.",
+        "MenuDevelopment": "Desarrollo",
         "MenuDiagnostic": "diagnóstico",
         "MenuGeneralSettings": "Configuración General",
         "MenuManage": "gestionar",
@@ -60,6 +63,7 @@
         "PiwikIsInstalledAt": "Piwik está instalado en",
         "PluginDescription": "Área de Administración de Piwik",
         "PluginSettingChangeNotAllowed": "No está permitido cambiar el valor de configuración \"%s\" en el plugin \"%s\"",
+        "PluginSettingReadNotAllowed": "No está permitido que leas el valor de la opción \"%s\" en el plugin \"%s\"",
         "PluginSettings": "Configuración del plugin",
         "PluginSettingsIntro": "Aquí puedes cambiar la configuración de los siguientes plugins de terceros:",
         "PluginSettingsValueNotAllowed": "El valor del campo \"%s\" del plugin \"%s\" no es permitido.",
