--- a/plugins/DevicesDetection/lang/de.json
+++ b/plugins/DevicesDetection/lang/de.json
@@ -16,8 +16,8 @@
         "DevicesDetection": "Geräte der Besucher",
         "DeviceType": "Gerätetyp",
         "FeaturePhone": "Feature-Phone",
-        "OperatingSystemFamilies": "Betriebssystem Familie",
-        "OperatingSystemVersions": "Betriebssystem Familien",
+        "OperatingSystemFamilies": "Betriebssystem Familien",
+        "OperatingSystemVersions": "Betriebssystem Versionen",
         "PluginDescription": "Dieses Plugin stellt erweiterte Informationen über mobile Geräte, wie Marke (Hersteller), Modell (Geräteversion), bessere Gerätetyperkennung (TV, Konsolen, Smartphones, Desktop, etc) und mehr bereit. Dieses Plugin fügt einen neuen Bericht unter 'Besucher > Geräte' hinzu.",
         "SmartDisplay": "Smart Display",
         "Smartphone": "Smartphone",
