--- a/plugins/Goals/lang/ja.json
+++ b/plugins/Goals/lang/ja.json
@@ -65,7 +65,12 @@
         "Manually": "手動",
         "ManuallyTriggeredUsingJavascriptFunction": "JavaScript API の trackGoal() を使用した手動トリガー",
         "MatchesExpression": "正規表現 %s に一致する",
+        "NewGoalDescription": "Piwik での目標とは、あなたの戦略や優先事項のことです。例えば、以下を含みます。:「パンフレットのダウンロード」、「ニュースレターの登録」、「services.html ページへの訪問」等",
+        "NewGoalIntro": "目標コンバージョントラッキングは、あなたのビジネス目標の測定や改善のために、最も効率的な方法の一つです。",
+        "NewGoalYouWillBeAbleTo": "各目標に対するパフォーマンスの確認や分析を行い、コンバージョンやコンバージョンレート、訪問数あたりの収益を上げる方法を知ることができます。",
         "NewVisitorsConversionRateIs": "新規ビジターのコンバージョン率は %s です",
+        "NewWhatDoYouWantUsersToDo": "ウェブサイトビジターに、何をしてもらいたいですか？",
+        "NoGoalsNeedAccess": "管理者またはスーパーユーザーアクセス権限を持つユーザーのみが、指定のウェブサイトに目標を追加できます。ウェブサイトに目標を設定するには、Piwik 管理者にお問い合わせください。<br> 目標の追跡は、あなたのウェブサイトへの理解を深め、パフォーマンスを最大化させるために、非常に良い方法です。",
         "Optional": "（オプション）",
         "OverallConversionRate": "%s 総コンバージョン率（目標達成ビジット）",
         "OverallRevenue": "%s 総収益",
@@ -77,6 +82,7 @@
         "Products": "製品",
         "ProductSKU": "製品番号",
         "ReturningVisitorsConversionRateIs": "リピーターのコンバージョン率は %s です",
+        "SendEvent": "イベントを送信",
         "SingleGoalOverviewDocumentation": "これは単一の目標のコンバージョンの概観です。 %s グラフの下のスパークラインは、クリックして拡大できます。",
         "UpdateGoal": "目標を更新",
         "URL": "URL",
