--- a/plugins/ImageGraph/lang/ja.json
+++ b/plugins/ImageGraph/lang/ja.json
@@ -1,5 +1,6 @@
 {
     "ImageGraph": {
+        "ColumnOrdinateMissing": "列 '%s' は、このレポートで見つかりませんでした。%s のいずれかをお試しください。",
         "PluginDescription": "Piwikリポートの美しい静的PNGグラフ画像を生成します。"
     }
 }
