--- a/plugins/Insights/lang/ja.json
+++ b/plugins/Insights/lang/ja.json
@@ -1,6 +1,8 @@
 {
     "Insights": {
         "ControlComparedToDescription": "比較する実績値は",
+        "ControlFilterByDescription": "すべて、変動のみ、新規のみ、削除のみを表示",
+        "DatePeriodCombinationNotSupported": "この日付と期間の組み合わせに対するインサイトは作成できません。",
         "DayComparedToPreviousDay": "前の日",
         "DayComparedToPreviousWeek": "前週の同じ日",
         "DayComparedToPreviousYear": "去年の同じ日",
@@ -11,9 +13,17 @@
         "FilterOnlyIncreaser": "増加した値のみ",
         "FilterOnlyMovers": "変化のあった値のみ",
         "FilterOnlyNew": "新しい値のみ",
+        "IgnoredChanges": "訪問数 %s 未満の影響を及ぼす変更は無視されました。",
         "MonthComparedToPreviousMonth": "前の月",
         "MonthComparedToPreviousYear": "去年の同じ月",
+        "MoversAndShakersWidgetTitle": "変動レポート",
+        "NoResultMatchesCriteria": "基準に一致する列がありません。",
         "OverviewWidgetTitle": "インサイトの概要",
+        "TitleConsideredInsightsChanges": "列が少なくとも %1$s 訪問 ( 合計訪問数 %3$s の %2$s%% ) 増加または減少しました。",
+        "TitleConsideredInsightsGrowth": "次の列は %2$s に比べて少なくとも %1$s%% の成長があります。",
+        "TitleRowDisappearedDetails": "%2$s によって '%1$s' は減少し、%4$s に比べ、%3$s で消滅した",
+        "TitleRowMoverAndShaker": "この列は、平均より高い影響を与えました。",
+        "TitleRowNewDetails": "'%2$s によって '%1$s' が増加し、%3$s に比べて新しい",
         "WeekComparedToPreviousWeek": "前の週",
         "WidgetCategory": "インサイト",
         "YearComparedToPreviousYear": "前の年"
