--- a/plugins/Installation/lang/ja.json
+++ b/plugins/Installation/lang/ja.json
@@ -1,9 +1,13 @@
 {
     "Installation": {
+        "CannotConnectToDb": "データベースに接続できません。",
+        "CannotConnectToDbResolvingExplanation": "これは一時的な問題の可能性があります。%1$srefreshing the page%2$s をお試しください。問題が続く場合、Piwik 管理者にお問い合わせください。",
+        "CollaborativeProject": "Piwik は、世界中の人々に愛され、構築されている共同プロジェクトです。",
         "ConfigurationHelp": "Piwik 設定ファイルが誤設定されているようです。 config\/config.ini.php を削除してインストールを再開するか、データベースの接続設定を修正してください。",
         "ConfirmDeleteExistingTables": "本当にデータベースからテーブル %s を削除しますか？ 警告： これらのテーブルのデータを復旧することはできません！",
         "Congratulations": "おめでとうございます",
         "CongratulationsHelp": "<p>おめでとうございます！ Piwik のインストールは完了しました。<\/p><p>javascript コードをウェブサイトのページに埋め込み、最初のビジターをお待ちください！<\/p>",
+        "DatabaseAbilities": "データベースアビリティ",
         "DatabaseCreation": "データベースの作成",
         "DatabaseErrorConnect": "データベースサーバーへの接続中にエラーが発生しました",
         "DatabaseServerVersion": "データベースサーバーのバージョン",
@@ -16,13 +20,23 @@
         "Email": "メールアドレス",
         "Extension": "エクステンション",
         "Filesystem": "ファイルシステム",
+        "GetInvolved": "もし Piwik を気にって頂けたら、是非 %1$sget involved%2$s 。",
         "GoBackAndDefinePrefix": "戻って、Piwik テーブルのプレフィックスを定義する",
         "HappyAnalysing": "ハッピーな解析を！",
         "Installation": "インストール",
         "InstallationStatus": "インストール状況",
         "InsufficientPrivilegesHelp": "phpMyAdminのようなツールを使用するか、正しいSQLクエリを実行することにより、これらの権限を追加できます。やり方がわからない場合は、システム管理者に依頼して、権限を付与してもらってください。",
+        "InsufficientPrivilegesMain": "データベースが存在しない ( および作成できない ) 、または具体的なユーザーが十分な権限を持っていない可能性があります。データベースユーザーは、次の権限を有する必要があります。: %s",
+        "JsTagArchivingHelp1": "中～高トラフィックのウェブサイトのために、Piwik をより早く(例えば %1$ssetting up auto-archiving%2$s のように) 実行するための最適化の手段があります。",
+        "JSTracking_EndNote": "注:インストールの処理後、%1$sTracking Code%2$s の管理セクションで、トラッキングコードのカスタマイズを行うことができます。",
+        "JSTracking_Intro": "Piwik でウェブトラフィックの追跡をするには、一部の特別なコードが各 web ページに追加されているかどうかを確認する必要があります。",
         "LargePiwikInstances": "高トラフィック環境で Piwik を使用するためのヒント",
         "Legend": "説明",
+        "LoadDataInfileRecommended": "あなたの Piwik サーバーが高いトラフィックのウェブサイト ( 例、1 ヶ月あたり 100,000 ページ以上 ) を追跡している場合、この問題の解決をお勧めします。",
+        "LoadDataInfileUnavailableHelp": "%1$s を使用すると、Piwik のアーカイブプロセスを大幅に高速化させます。それを Piwik で利用可能にするには、お使いの PHP と MySQL ソフトウェアのアップデートをお試しください。またデータベースユーザーが %2$s 権限を持っているかどうかご確認ください。",
+        "NfsFilesystemWarning": "あなたのサーバーは、NFS ファイルシステムを使用しています。",
+        "NfsFilesystemWarningSuffixAdmin": "これは、ファイルベースのセッションを利用する際、Piwik が極端に遅くなることを意味します。",
+        "NfsFilesystemWarningSuffixInstall": "NFS 上でファイルベースのセッションを利用すると極端に遅いので、Piwik はデータベースセッションを使用します。同時に多くのダッシュボードユーザーがいる場合、データベースサーバーへのクライアント接続の最大数を増やす必要があります。",
         "NoConfigFound": "Piwik の設定ファイルを見つけることができませんでしたが、あなたは Piwik ページにアクセスしようとしています。<br \/><b>  »<a href='index.php'>ただちに Piwik をインストール<\/a>することができます。<\/b><br \/><small>以前に Piwik をインストールしたことがあり、DB に多少のデータがある場合でも心配しないでください。 既存のデータを保持したまま、同じテーブルを再利用することができます！<\/small>",
         "NotSupported": "サポートされていません",
         "Optional": "オプション",
@@ -30,22 +44,30 @@
         "PasswordDoNotMatch": "パスワードが一致しませんでした",
         "PasswordRepeat": "パスワード（再入力）",
         "PercentDone": "%s %% 完了",
+        "PiwikOrgNewsletter": "私に Piwik コミュニティの最新情報をメールで送る",
+        "PiwikProNewsletter": "%sPiwik PRO%s サービス( 月1回以下のメール受信 ) に興味があります。",
         "PleaseFixTheFollowingErrors": "次のエラーを修正してください",
         "PluginDescription": "Piwik のインストール処理を行います。 インストールは通常1回のみですが、設定ファイル（config\/config.inc.php）が削除された場合は、インストールが再度開始されます。",
         "Requirements": "Piwik の動作環境",
         "RestartWebServer": "この変更を行った後、ウェブサーバーを再起動してください。",
+        "ReusingTables": "表の再利用",
+        "SeeBelowForMoreInfo": "詳細は、以下をご確認ください。",
         "SetupWebsite": "ウェブサイトのセットアップ",
         "SetupWebsiteError": "ウェブサイトを追加する際にエラーが発生しました",
         "SetupWebSiteName": "ウェブサイトの名前",
         "SetupWebsiteSetupSuccess": "ウェブサイト %s は正常に作成されました！",
         "SetupWebSiteURL": "ウェブサイトの URL",
+        "SiteSetup": "Piwik で追跡・分析したい初めのウェブサイトを設定してください。",
+        "SiteSetupFootnote": "注: Piwik のインストールが完了すると、さらに追跡対象のウェブサイトを追加することができるようになります!",
         "SuperUser": "スーパーユーザー",
         "SuperUserLogin": "スーパーユーザーのログイン",
+        "SuperUserSetupError": "スーパーユーザーの追加時に、エラーが発生しました。",
         "SuperUserSetupSuccess": "スーパーユーザーの作成に成功しました！",
         "SystemCheck": "システムの確認",
         "SystemCheckAutoUpdateHelp": "注意： Piwik のワンクリックアップデートには、Piwik のフォルダとその内容に書き込み権限が必要となります。",
         "SystemCheckCreateFunctionHelp": "Piwik はコールバックに匿名関数を使用します。",
         "SystemCheckCronArchiveProcess": "アーカイブ cron",
+        "SystemCheckCronArchiveProcessCLI": "CLI を経由して処理を管理する",
         "SystemCheckDatabaseHelp": "Piwik には、mysqli エクステンションか、PDO と pdo_mysql エクステンションの両方の、どちらかが必要です。",
         "SystemCheckDebugBacktraceHelp": "View::factory はコール側モジュールのビューを作成することができません。",
         "SystemCheckError": "エラー発生 - 次の処理へ進む前に修正する必要があります。",
@@ -53,13 +75,16 @@
         "SystemCheckExtensions": "その他の必須エクステンション",
         "SystemCheckFileIntegrity": "ファイルの整合性",
         "SystemCheckFunctions": "必須関数",
+        "SystemCheckGDFreeType": "GD > 2.x + Freetype (graphics)",
         "SystemCheckGDHelp": "スパークライン（小さなグラフ）は動作しません。",
         "SystemCheckGlobHelp": "この組み込み関数はホストで無効化されています。 Piwik はこの関数のエミュレートを試みますが、さらなるセキュリティ制限に遭遇する場合があります。 また、機能性にも影響を与える場合があります。",
         "SystemCheckGzcompressHelp": "zlib エクステンションと gzcompress() 関数を有効にする必要があります。",
         "SystemCheckGzuncompressHelp": "zlib エクステンションと gzuncompress() 関数を有効にする必要があります。",
         "SystemCheckIconvHelp": "\"iconv\" のサポートを有効にして、PHP の再構築と設定を行う必要があります（--with-iconv）。",
+        "SystemCheckJsonHelp": "JSON データの読取と書込には、Piwik に php5-json の拡張モジュールが必要です。",
         "SystemCheckMailHelp": "mail() 関数がない場合、フィードバックとパスワード紛失のメッセージを送信することができません。",
         "SystemCheckMbstring": "mbstring",
+        "SystemCheckMbstringHelp": "拡張モジュール mbstring は、ユーザインタフェースと API レスポンスで、マルチバイト文字を処理するために必要です。また、php.ini で mbstring.func_overload が「 0 」に設定されていることを確認してください。",
         "SystemCheckMemoryLimit": "メモリー制限",
         "SystemCheckMemoryLimitHelp": "アクセス数の多いウェブサイトでは、アーカイブ処理の実行に、現在許可されている以上に多くのメモリを必要とする場合があります。<br \/>必要であれば、php.ini ファイルのディレクティブ memory_limit を参照してください。",
         "SystemCheckOpenURL": "オープン URL",
