--- a/lang/en.json
+++ b/lang/en.json
@@ -355,6 +355,7 @@
         "Seconds": "%ss",
         "SeeAll": "see all",
         "SeeTheOfficialDocumentationForMoreInformation": "See the %sofficial documentation%s for more information.",
+        "SeeThisFaq": "See %1$sthis faq%2$s.",
         "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Select \"Yes\" if you want or have to send e-mail via a named server instead of the local mail function",
         "Settings": "Settings",
