Remove MobileVSDesktop reports as we now have detailed device type reports; rename GetWideScreen report to GetScreenType, as that better points out what it returns

--- a/plugins/UserSettings/lang/en.json
+++ b/plugins/UserSettings/lang/en.json
@@ -12,6 +12,7 @@
         "ColumnOperatingSystem": "Operating system",
         "ColumnResolution": "Resolution",
         "ColumnTypeOfScreen": "Type of screen",
+        "ScreenTypes": "Screen types",
         "Configurations": "Configurations",
         "GamingConsole": "Gaming Console",
         "Language_aa": "Afar",
