language update  refs #3430

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -67,6 +67,7 @@
         "ColumnNbUniqVisitors": "ユニークビジター数",
         "ColumnNbUniqVisitorsDocumentation": "サイトを訪問した重複しないビジター数。全てのユーザーは、一日に複数回訪問しても、一度だけカウントされます。",
         "ColumnNbUsers": "ユーザー",
+        "ColumnNbUsersDocumentation": "あなたのサイトにログインしたユーザー数。つまりユーザー ID が設定されているユニークアクティブユーザー数です。(トラッキングコードファンクション 'setUserId' 経由)",
         "ColumnNbVisits": "ビジット",
         "ColumnNbVisitsDocumentation": "初めてサイトに来た訪問者、もしくは最後にページを見てから30分以上経ってからページを訪問した場合は新規ビジットとして記録される。",
         "ColumnPageBounceRateDocumentation": "このページから閲覧を開始して、直接サイトを離れたビジットの割合",
@@ -271,6 +272,7 @@
         "NotValid": "%s は有効ではありません",
         "NSeconds": "%s 秒",
         "NumberOfVisits": "訪問数",
+        "NUsers": "%s ユーザー",
         "NVisits": "%s ビジット",
         "Ok": "OK",
         "OneAction": "1アクション",
@@ -405,6 +407,7 @@
         "Unknown": "不明",
         "Upload": "アップロード",
         "UsePlusMinusIconsDocumentation": "左側のプラス記号とマイナス記号のアイコンをクリックして操作します",
+        "UserId": "ユーザー ID",
         "Username": "ユーザー名",
         "UseSMTPServerForEmail": "メール送信に SMTP サーバを使用",
         "Value": "値",
@@ -428,6 +431,7 @@
         "WarningFileIntegrityNoManifestDeployingFromGit": "Git から Piwik を開発している場合、このメッセージは正常です。",
         "WarningFileIntegrityNoMd5file": "md5_file() 関数が存在しないため、ファイルの整合性チェックを完了することができませんでした。",
         "WarningPasswordStored": "%s警告：%s このパスワードは設定ファイルに保存されます。 この設定ファイルにアクセス可能な人であれば、パスワードを見られる可能性があることに注意してください。",
+        "WarningPhpVersionXIsTooOld": "ご利用の PHP バージョン %s は、利用期間が終了( EOL )しています。セキュリティの脆弱性と、最新の PHP バージョンで既に修正されたバグに対するリスクを避けるため、必ず最新バージョンへアップグレードしてください。",
         "Website": "ウェブサイト",
         "Weekly": "毎週",
         "WeeklyReport": "毎週",
@@ -448,15 +452,74 @@
         "YourChangesHaveBeenSaved": "変更は保存されました。"
     },
     "Mobile": {
+        "AboutPiwikMobile": "Piwik モバイルについて",
         "AccessUrlLabel": "Piwik アクセス URL",
+        "Account": "アカウント",
+        "Accounts": "アカウント",
+        "AddAccount": "アカウントの追加",
+        "AddPiwikDemo": "Piwik デモを追加",
+        "Advanced": "アドバンス",
         "AnonymousAccess": "匿名アクセス",
+        "AnonymousTracking": "匿名トラッキング",
+        "AskForAnonymousTrackingPermission": "有効にすると、匿名の利用データが Piwik モバイルから piwik.org に送信されます。Piwik モバイル開発者が、アプリケーションが実際にどのように利用されているかを理解するヒントになるためです。送信される情報は、クリックされたメニューと設定、OS 名と OS バージョン、Piwik モバイルに表示された様々なエラーです。ただし、Piwik チームが、あなたの分析データを追跡することはありません。また匿名データが一般に公開されることはありません。また匿名トラッキングの有効 \/ 無効化はいつでも設定可能です。",
+        "ChooseHttpTimeout": "HTTP タイムアウトの値を選んでください。",
+        "ChooseMetric": "メトリクスを選んでください。",
+        "ChooseReport": "レポートを選んでください。",
+        "ChooseSegment": "セグメントを選んでください。",
+        "ConfirmRemoveAccount": "このアカウントを削除しますか?",
         "DefaultReportDate": "リポートの日付",
+        "EmailUs": "私達にメールを送ってください。",
         "EnableGraphsLabel": "グラフの表示",
+        "EvolutionGraph": "履歴グラフ",
+        "HelpUsToImprovePiwikMobile": "Piwik モバイルで匿名利用データのトラッキングを有効にしますか?",
+        "HowtoDeleteAnAccount": "アカウントを削除するには、長押ししてください。",
+        "HowtoDeleteAnAccountOniOS": "アカウントを削除するには、右から左へスワイプしてください。",
+        "HowtoLoginAnonymous": "匿名ログインのため、ユーザー名とパスワードを空のままにしてください。",
+        "HttpIsNotSecureWarning": "\"HTTP\" を使用している場合、Piwik 認証トークン( token_auth )が、平文で送信されます。インターネット経由で安全なデータ転送を行うには、HTTPS をお勧めします。続行しますか?",
+        "HttpTimeout": "HTTP タイムアウト",
+        "IgnoreSslError": "SSL エラーを無視",
+        "IncompatiblePiwikVersion": "お使いの Piwik バージョンは、Piwik モバイル 2 と互換性がありません。Piwik インストールをアップデートし再度お試し頂くか、Piwik モバイル 1 をインストールしてください。",
+        "LastUpdated": "最新アップデート %s",
+        "LoadingReport": "ロード中 %s",
+        "LoginCredentials": "認証情報",
+        "LoginToPiwikToChangeSettings": "ウェブサイトやユーザーを作成またはアップデートしたり、\"デフォルトでロードするレポート\"のような一般設定を変更するには、Piwik サーバーにログインしてください。",
+        "LoginUseHttps": "HTTPS を使用してください。",
         "MultiChartLabel": "スパークラインの表示",
+        "NavigationBack": "戻る",
+        "NetworkError": "ネットワークエラー",
+        "NetworkErrorWithStatusCode": "エラー \"%s\" があります。リクエストはステータス \"%s\" を返しました。URL は \"%s\" でした。このエラーの詳細と、解決方法については、入力した URL とこのサーバーのエラーログを確認してください。",
+        "NetworkErrorWithStatusCodeShort": "ネットワークエラー %s",
         "NetworkNotReachable": "ネットワークに到達できませんでした",
+        "NoAccountIsSelected": "アカウントを選ぶ必要があります。まだ設定が完了していない場合、新しいアカウントを追加してください。",
+        "NoDataShort": "データなし",
+        "NoPiwikAccount": "Piwik アカウントをお持ちではないですか?",
+        "NoReportsShort": "レポートなし",
         "NoVisitorFound": "ビジターはみつかりません",
         "NoVisitorsShort": "ビジターはいません",
+        "NoWebsiteFound": "ウェブサイトが見つかりません。",
+        "NoWebsitesShort": "ウェブサイトなし",
+        "PossibleSslError": "SSL 証明エラーの可能性があります。",
+        "PullDownToRefresh": "プルダウンして更新 …",
+        "RatingDontRemindMe": "リマインドしないでください。",
+        "RatingNotNow": "今ではありません。",
+        "RatingNow": "OK です。いま、評価します。",
+        "RatingPleaseRateUs": "Piwik モバイルアプリは、フリーソフトです。1 分お時間をいただけませんか?もしよろしければ、%s でアプリを評価して頂けたら嬉しいです。新機能やバグレポートの提案をお持ちでしたら、ぜひ %s にご連絡ください。",
+        "ReleaseToRefresh": "リリース更新",
+        "Reloading": "リロード中",
+        "RequestTimedOutShort": "ネットワークタイムアウトエラー",
+        "RestrictedCompatibility": "制限付きの互換性",
+        "RestrictedCompatibilityExplanation": "お使いの Piwik バージョン %s は、Piwik モバイル 2 に完全にサポートされていないため、いくつかバグが見つかる可能性があります。Piwik を最新のバージョンにアップデートするか、Piwik モバイル 1 のご利用をおすすめします。",
         "SaveSuccessError": "設定を確認してください",
+        "SearchWebsite": "ウェブサイトを検索",
+        "ShowAll": "全てを表示",
+        "ShowLess": "より少なく表示",
+        "StaticGraph": "概要表示",
+        "TopVisitedWebsites": "最も訪問されたウェブサイト",
+        "TryIt": "試してみる !",
+        "UseSearchBarHint": "ここでは最初の %s ウェブサイトのみ表示されています。あなたの他のウェブサイトにアクセスするには、検索バーをご利用ください。",
+        "ValidateSslCertificate": "SSL 証明の検証",
+        "VerifyAccount": "アカウントの検証",
+        "VerifyLoginData": "ユーザー名とパスワードの組み合わせが正しいことを確認してください。",
         "YouAreOffline": "現在はオフラインです"
     }
 }
