--- a/plugins/Installation/lang/ja.json
+++ b/plugins/Installation/lang/ja.json
@@ -96,7 +96,11 @@
         "SystemCheckPdoAndMysqliHelp": "Linux サーバーでは、次のオプションで PHP をコンパイルします：%1$sphp.ini に次の行を追加します：%2$s",
         "SystemCheckPhp": "PHP バージョン",
         "SystemCheckPhpPdoAndMysqli": "詳細ドキュメント：%1$sPHP PDO%2$s、%3$sMYSQLI%4$s",
+        "SystemCheckSessionAutostart": "いくつかの問題を避けるには、php.ini ファイルを以下のように設定してください。session.auto_start=0",
         "SystemCheckSplHelp": "Standard PHP Library (SPL) を有効にして、PHP の再構築と設定を行う必要があります（通常はデフォルト）。",
+        "SystemCheckSummaryNoProblems": "安心してください。Piwik のセットアップに問題はありません。",
+        "SystemCheckSummaryThereWereErrors": "Piwikセットアップで、いくつかの %1$scritical issues%2$s が検知されました。 %3$sThese issues should be fixed immediately.%4$s",
+        "SystemCheckSummaryThereWereWarnings": "システムにいくつかの問題があります。Piwik は実行できますが、いくつか小さな問題がみられる可能性があります。",
         "SystemCheckTimeLimitHelp": "アクセス数の多いウェブサイトでは、アーカイブ処理の実行に、現在許可されている以上に多くの時間を必要とする場合があります。<br \/>必要であれば、php.ini ファイルのディレクティブ max_execution_time を参照してください。",
         "SystemCheckTracker": "トラッカー状況",
         "SystemCheckTrackerHelp": "piwik.php に対する GET リクエストが失敗しました。 この URL を mod_security と HTTP 認証からホワイトリスト化してください。",
@@ -115,9 +119,11 @@
         "TablesDeletedSuccess": "既存の Piwik テーブルは正常に削除されました",
         "TablesFound": "次のテーブルがデータベース内で見つかりました",
         "TablesReuse": "既存テーブルを再利用",
+        "TablesUpdatedSuccess": "データベースの %1$s から %2$s へのアップデートが成功しました。",
         "TablesWarningHelp": "既存のデータベーステーブルを再利用するか、データベース内の全データを消去してクリーンインストールするかを選択してください。",
         "TablesWithSameNamesFound": "%1$s既存のデータベース内のいくつかのテーブル%2$sが、Piwik が作成しようとしているテーブルと同じ名前を持っています",
         "Timezone": "ウェブサイトのタイムゾーン",
+        "WeHopeYouWillEnjoyPiwik": "私達が Piwik の開発を楽しんでいるように、Piwik のご利用をお楽しみ頂ける事を願っています。",
         "Welcome": "ようこそ！",
         "WelcomeHelp": "<p>Piwik は、ビジターからあなたが必要とする情報を収集することを容易にする、オープンソースのウェブ解析ソフトウェアです。<\/p><p>この処理は %s の簡単なステップに分かれていて、5分程度で完了します。<\/p>",
         "WelcomeToCommunity": "Piwik コミュニティへようこそ！"
