--- a/plugins/Referrers/lang/cs.json
+++ b/plugins/Referrers/lang/cs.json
@@ -10,7 +10,7 @@
         "ColumnWebsite": "Web",
         "ColumnWebsitePage": "Web stránka",
         "DetailsByReferrerType": "Podrobnosti podle typu refereru",
-        "DirectEntry": "Přímy vstup",
+        "DirectEntry": "Přímý vstup",
         "DirectEntryDocumentation": "Návštěvník zadal URL vašich stránek do webového prohlížeče a začal s procházením zde - adresu zadal přímo.",
         "Distinct": "Jedineční refereři podle typu",
         "DistinctCampaigns": "jedinečné kampaně",
