--- a/plugins/CoreAdminHome/lang/ja.json
+++ b/plugins/CoreAdminHome/lang/ja.json
@@ -29,6 +29,7 @@
         "JSTracking_CustomCampaignQueryParam": "キャンペーン名とキーワード用のカスタムクエリパラメータ名を使用",
         "JSTracking_CustomCampaignQueryParamDesc": "注： %1$sPiwikは自動的にGoogle Analyticsのパラメータを検出します。%2$s",
         "JSTracking_DisableCookies": "すべてのトラッキングクッキーを無効にする",
+        "JSTracking_DisableCookiesDesc": "全てのファーストパーティーの cookie を無効にします。既存のウェブサイトの Piwik cookie は、次のページビューで削除されます。",
         "JSTracking_EnableDoNotTrack": "クライアント側のDoNotTrackの検出を有効にする",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "注： サーバー側のDoNotTrackサポートが有効になっているので、このオプションは効果がありません。",
         "JSTracking_EnableDoNotTrackDesc": "訪問者が追跡されることを望まない場合、トラッキングのリクエストは送信されません。",
