--- a/plugins/Goals/lang/ja.json
+++ b/plugins/Goals/lang/ja.json
@@ -10,6 +10,7 @@
         "BestKeywords": "トップコンバージョンのキーワード：",
         "BestReferrers": "ベストコンバージョンの参照元ウェブサイト",
         "CaseSensitive": "大文字小文字を区別する一致",
+        "ChooseGoal": "Choose Goal",
         "ClickOutlink": "外部ウェブサイトへのリンクをクリック",
         "ColumnAverageOrderRevenueDocumentation": "平均注文値（AOV）は、全てのeコマース注文の総収益を注文数で割ったものです。",
         "ColumnAveragePriceDocumentation": "この %s の平均収益。",
