--- a/plugins/Live/lang/ja.json
+++ b/plugins/Live/lang/ja.json
@@ -1,24 +1,38 @@
 {
     "Live": {
+        "AveragePageGenerationTime": "この訪問者のロードに、各ページ平均 %1$s かかりました。",
+        "CalculatedOverNPageViews": "この訪問者の最終 %1$s ページビューを利用して計算",
+        "ClickToViewMoreAboutVisit": "この訪問に関する詳細情報を見るには、クリックしてください。",
+        "ConvertedNGoals": "変換された %s 目標",
+        "EcommerceSummaryConversions": "%1$s%2$s は、合計 %3$s%4$s を注文し、%5$s アイテムを購入しました。",
+        "FirstVisit": "最初の訪問",
         "GoalType": "タイプ",
+        "HideMap": "隠れたマップ",
         "KeywordRankedOnSearchResultForThisVisitor": "キーワード %1$s はこのビジターの %3$s 検索結果ページで %2$s にランクされました。",
         "LastHours": "最近の %s 時間",
         "LastMinutes": "最近の %s 分",
+        "LastVisit": "最後の訪問",
         "LinkVisitorLog": "詳細なビジターログを表示",
+        "LoadMoreVisits": "さらに訪問をロード",
         "MorePagesNotDisplayed": "このビジターの表示はこれ以上ありません",
         "NbVisitor": "1人のビジター",
         "NbVisitors": "%s のビジター",
         "NextVisitor": "次のビジター",
+        "NoMoreVisits": "この訪問者のさらなる訪問はありません。",
         "PageRefreshed": "このページが見られた\/更新された回数",
         "PluginDescription": "ビジターをリアルタイムにライブでスパイします！",
         "PreviousVisitor": "前のビジター",
         "RealTimeVisitorCount": "リアルタイムのビジター数",
         "Referrer_URL": "参照元 URL",
+        "ShowMap": "地図を表示",
+        "SimpleRealTimeWidget_Message": "最後の %s の %s と %s",
         "ViewVisitorProfile": "ビジターのプロフィールをみる",
+        "VisitedPages": "訪問されたページ",
         "VisitorLog": "ビジターログ",
         "VisitorLogDocumentation": "この表は選択した日付期間内で最新のビジットについて表示しています。ビジットの日付の上にマウスを移動して、そのビジターの最後のビジットが何日前か見ることが出来ます。%s 期間内に本日が含まれていれば、ビジターをリアルタイムで見られます！ %s ここに表示されるのは、アーカイブのためのcronジョブ設定の頻度に関わらず、常にライブのデータです。",
         "VisitorProfile": "ビジターのプロフィール",
         "VisitorsInRealTime": "リアルタイムのビジター",
-        "VisitorsLastVisit": "このビジターの最新のビジットは %s 日前です。"
+        "VisitorsLastVisit": "このビジターの最新のビジットは %s 日前です。",
+        "VisitsFrom": "から %1$s%2$s が %3$s を訪問"
     }
 }
