--- a/plugins/MultiSites/lang/ja.json
+++ b/plugins/MultiSites/lang/ja.json
@@ -1,6 +1,9 @@
 {
     "MultiSites": {
         "Evolution": "推移",
-        "PluginDescription": "マルチサイト運営の概要や統計を表示します。 現在は、コア Piwik プラグインとしてメンテナンスされています。"
+        "LoadingWebsites": "ウェブサイトをロード中",
+        "Pagination": "%s の %s - %s",
+        "PluginDescription": "マルチサイト運営の概要や統計を表示します。 現在は、コア Piwik プラグインとしてメンテナンスされています。",
+        "TopLinkTooltip": "あなたの全ウェブサイトに対するウェブ解析統計情報を比較してください。"
     }
 }
