--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -1,6 +1,5 @@
 {
     "Installation": {
-        "AnonymiseIPAddressesField": "Anonymise IP addresses of users in Piwik (better privacy)<br>When users visit your website, Piwik will not use the full IP Address (such as 213.34.51.91) but instead Piwik will anonymise it first (to 213.34.0.0). IP address anonymisation is one the requirement set by the privacy laws in some countries such as Germany.",
         "CollaborativeProject": "Piwik is a collaborative project, built with love by people from all over the world.",
         "ConfigurationHelp": "Your Piwik configuration file appears to be misconfigured. You can either remove config\/config.ini.php and resume installation, or correct the database connection settings.",
         "ConfirmDeleteExistingTables": "Are you sure you want to delete the tables: %s from your database? WARNING: DATA FROM THESE TABLES CANNOT BE RECOVERED!",
@@ -44,8 +43,8 @@
         "PercentDone": "%s %% Done",
         "PleaseFixTheFollowingErrors": "Please fix the following errors",
         "PluginDescription": "Installation process of Piwik. The Installation is usually done once only. If the configuration file config\/config.inc.php is deleted, the installation will start again.",
-        "PrivacyOptions": "Privacy options",
-        "PrivacyOptionsHelp": "Piwik has some privacy options enabled by default. This form lets you customize them now, or you can do so later in the settings.",
+        "DefaultSettings": "Default Piwik settings",
+        "DefaultSettingsHelp": "Piwik comes with default settings. You can customize them now or do so later in the admin screen.",
         "Requirements": "Piwik Requirements",
         "RestartWebServer": "After making this change, restart your web server.",
         "ReusingTables": "Reusing the Tables",
